<resources>
    <string name="app_name">Hobbitor</string>
    <string name="booki">Hobbitor</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="title_activity_nearest_bookstore">NearestBookstoreActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="library">Library</string>
    <string name="chatbot">chatbot</string>
    <string name="Overview">Overview</string>
    <string name="Genres">Genres</string>
    <string name="vote_average">Average Rating</string>
    <string name="Rating">Rating</string>
    <string name="production_companies">Production Companies</string>
    <string name="Trailer">Trailer</string>
    <string name="title_activity_song_detail">SongDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="powered_by">Powered By</string>
    <string name="Cast">Cast</string>
    <string name="search">"Search here "</string>
    <string name="search_results">"Search Results For "</string>
    <string name="add_rating">Add Rating</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="Categories">Categories</string>
    <string name="Links">External Links</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="proceed">Proceed</string>
    <string name="choose_fav_artist">Choose Your Favourite Song Artists</string>
    <string name="choose_fav_genres">Choose Your Favourite Music Genres</string>
    <string name="finish">Finish</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlistName">Playlist Name</string>
    <string name="music_found">Music Files Found</string>
    <string name="choose_playlist">Choose a Playlist</string>
    <string name="themes">App Themes</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="English">English</string>
    <string name="logout">Logout</string>
    <string name="mapError">Can\'t open maps</string>
    <string name="enableLocation">You have to enable location permission</string>
    <string name="loadLocalMusic">Load Local Music</string>
    <string name="loadLocalMusicMsg">Are you sure you want to load or update your own local music in the app?</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playlistNameError">You have to enter playlist name</string>
    <string name="ratingAdded">Rating Added</string>
    <string name="ratingError">Error adding rating</string>
    <string name="successAdd">Successfully added</string>
    <string name="failedAdd">Failed to add</string>
    <string name="select3Artists">You have to select at least 3 artists</string>
    <string name="select3Genres">You have to select at least 3 genres</string>
    <string name="errorTryAgain">Error, Please Try Again</string>
    <string name="create_playlist_suc">Playlist created successfully</string>
    <string name="create_playlist_fail">Failed to create playlist please try again</string>
    <string name="uploadingData">Uploading Music Data</string>
    <string name="uploadingDataSuc">Successfully uploaded music data</string>
    <string name="uploadingDataFail">Error uploading music data, please try again</string>
    <string name="loadLocalMusicFrom">Loading music from</string>
    <string name="unknown">Unknown</string>
    <string name="songArtists">Song Artists</string>
    <string name="enterProperData">You have to enter valid data</string>
    <string name="emailAlreadyExists">Email already exists</string>
    <string name="released">Released</string>
    <string name="postproduction">Post Production</string>
    <string name="planned">Planned</string>
    <string name="typeMessage">"Type a message "</string>
</resources>
