<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/DialogBg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/create_playlist"
        android:textColor="?attr/HeaderText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_margin="8dp"
        android:id="@+id/pNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/inputTextColor"
        android:hint="@string/playlistName"
        android:textColor="?attr/inputTextColor"
        android:textColorHint="?attr/hintTextColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/movie_select"
        android:layout_margin="16dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_movies_not_selected"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNameEditText"/>


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/music_select"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_music"
        app:layout_constraintEnd_toEndOf="@+id/pNameEditText"
        app:layout_constraintStart_toStartOf="@+id/pNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/pNameEditText" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/book_select"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_books_not_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/pNameEditText" />


    <Button
        android:id="@+id/playlist_btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="#0f0"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_select" />

    <Button
        android:id="@+id/playlist_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="#f00"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_select" />

</androidx.constraintlayout.widget.ConstraintLayout>